[package]
name = "netcode-rs"
version = "0.1.0"
edition = "2021"
authors = ["Benny Nazimov <benick12@gmail.com>"]
keywords = ["netcode"]
license = "BSD-3-Clause"
repository = "https://github.com/benny-n/netcode-rs"
documentation = "https://docs.rs/netcode-rs"
description = "Rust implementation of the netcode.io protocol"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
chacha20poly1305 = { version = "0.10.1", features = ["std", "heapless"] }
env_logger = "0.10.0"
log = "0.4.19"
socket2 = "0.5.3"
thiserror = "1.0.44"
